examples/ast-html/src/tests/corpus/snapshots/ast_html__tests__corpus__nested_tags@name.snap
---
source: src/tests/corpus/mod.rs
expression: "get_ast(& db, file)"
---
ParsedAst {
    nodes: [
        Document {
            children: [
                AstNodeId {
                    id: 1,
                    _marker: PhantomData<ast_html::generated::Doctype_Element_Entity_ErroneousEndTag_ScriptElement_StyleElement_Text>,
                },
            ],
            _range: Range {
                start_byte: 0,
                end_byte: 64,
                start_point: Point {
                    row: 0,
                    column: 0,
                },
                end_point: Point {
                    row: 6,
                    column: 6,
                },
            },
            _id: 0,
            _parent: None,
        },
        Element(
            Element {
                children: [
                    AstNodeId {
                        id: 2,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 4,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 10,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 11,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 17,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 18,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                ],
                _range: Range {
                    start_byte: 0,
                    end_byte: 64,
                    start_point: Point {
                        row: 0,
                        column: 0,
                    },
                    end_point: Point {
                        row: 6,
                        column: 6,
                    },
                },
                _id: 1,
                _parent: Some(
                    0,
                ),
            },
        ),
        StartTag(
            StartTag {
                children: [
                    AstNodeId {
                        id: 3,
                        _marker: PhantomData<ast_html::generated::Attribute_TagName>,
                    },
                ],
                _range: Range {
                    start_byte: 0,
                    end_byte: 5,
                    start_point: Point {
                        row: 0,
                        column: 0,
                    },
                    end_point: Point {
                        row: 0,
                        column: 5,
                    },
                },
                _id: 2,
                _parent: Some(
                    1,
                ),
            },
        ),
        TagName(
            TagName {
                _range: Range {
                    start_byte: 1,
                    end_byte: 4,
                    start_point: Point {
                        row: 0,
                        column: 1,
                    },
                    end_point: Point {
                        row: 0,
                        column: 4,
                    },
                },
                _id: 3,
                _parent: Some(
                    2,
                ),
            },
        ),
        Element(
            Element {
                children: [
                    AstNodeId {
                        id: 5,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 7,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 8,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                ],
                _range: Range {
                    start_byte: 8,
                    end_byte: 22,
                    start_point: Point {
                        row: 1,
                        column: 2,
                    },
                    end_point: Point {
                        row: 1,
                        column: 16,
                    },
                },
                _id: 4,
                _parent: Some(
                    1,
                ),
            },
        ),
        StartTag(
            StartTag {
                children: [
                    AstNodeId {
                        id: 6,
                        _marker: PhantomData<ast_html::generated::Attribute_TagName>,
                    },
                ],
                _range: Range {
                    start_byte: 8,
                    end_byte: 14,
                    start_point: Point {
                        row: 1,
                        column: 2,
                    },
                    end_point: Point {
                        row: 1,
                        column: 8,
                    },
                },
                _id: 5,
                _parent: Some(
                    4,
                ),
            },
        ),
        TagName(
            TagName {
                _range: Range {
                    start_byte: 9,
                    end_byte: 13,
                    start_point: Point {
                        row: 1,
                        column: 3,
                    },
                    end_point: Point {
                        row: 1,
                        column: 7,
                    },
                },
                _id: 6,
                _parent: Some(
                    5,
                ),
            },
        ),
        Text(
            Text {
                _range: Range {
                    start_byte: 14,
                    end_byte: 15,
                    start_point: Point {
                        row: 1,
                        column: 8,
                    },
                    end_point: Point {
                        row: 1,
                        column: 9,
                    },
                },
                _id: 7,
                _parent: Some(
                    4,
                ),
            },
        ),
        EndTag(
            EndTag {
                children: AstNodeId {
                    id: 9,
                    _marker: PhantomData<ast_html::generated::TagName>,
                },
                _range: Range {
                    start_byte: 15,
                    end_byte: 22,
                    start_point: Point {
                        row: 1,
                        column: 9,
                    },
                    end_point: Point {
                        row: 1,
                        column: 16,
                    },
                },
                _id: 8,
                _parent: Some(
                    4,
                ),
            },
        ),
        TagName {
            _range: Range {
                start_byte: 17,
                end_byte: 21,
                start_point: Point {
                    row: 1,
                    column: 11,
                },
                end_point: Point {
                    row: 1,
                    column: 15,
                },
            },
            _id: 9,
            _parent: Some(
                8,
            ),
        },
        Text(
            Text {
                _range: Range {
                    start_byte: 25,
                    end_byte: 26,
                    start_point: Point {
                        row: 2,
                        column: 2,
                    },
                    end_point: Point {
                        row: 2,
                        column: 3,
                    },
                },
                _id: 10,
                _parent: Some(
                    1,
                ),
            },
        ),
        Element(
            Element {
                children: [
                    AstNodeId {
                        id: 12,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 14,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                    AstNodeId {
                        id: 15,
                        _marker: PhantomData<ast_html::generated::Doctype_Element_EndTag_Entity_ErroneousEndTag_ScriptElement_SelfClosingTag_StartTag_StyleElement_Text>,
                    },
                ],
                _range: Range {
                    start_byte: 29,
                    end_byte: 37,
                    start_point: Point {
                        row: 3,
                        column: 2,
                    },
                    end_point: Point {
                        row: 3,
                        column: 10,
                    },
                },
                _id: 11,
                _parent: Some(
                    1,
                ),
            },
        ),
        StartTag(
            StartTag {
                children: [
                    AstNodeId {
                        id: 13,
                        _marker: PhantomData<ast_html::generated::Attribute_TagName>,
                    },
                ],
                _range: Range {
                    start_byte: 29,
                    end_byte: 32,
                    start_point: Point {
                        row: 3,
                        column: 2,
                    },
                    end_point: Point {
                        row: 3,
                        column: 5,
                    },
                },
                _id: 12,
                _parent: Some(
                    11,
                ),
            },
        ),
        TagName(
            TagName {
                _range: Range {
                    start_byte: 30,
                    end_byte: 31,
                    start_point: Point {
                        row: 3,
                        column: 3,
                    },
                    end_point: Point {
                        row: 3,
                        column: 4,
                    },
                },
                _id: 13,
                _parent: Some(
                    12,
                ),
            },
        ),
        Text(
            Text {
                _range: Range {
                    start_byte: 32,
                    end_byte: 33,
                    start_point: Point {
                        row: 3,
                        column: 5,
                    },
                    end_point: Point {
                        row: 3,
                        column: 6,
                    },
                },
                _id: 14,
                _parent: Some(
                    11,
                ),
            },
        ),
        EndTag(
            EndTag {
                children: AstNodeId {
                    id: 16,
                    _marker: PhantomData<ast_html::generated::TagName>,
                },
                _range: Range {
                    start_byte: 33,
                    end_byte: 37,
                    start_point: Point {
                        row: 3,
                        column: 6,
                    },
                    end_point: Point {
                        row: 3,
                        column: 10,
                    },
                },
                _id: 15,
                _parent: Some(
                    11,
                ),
            },
        ),
        TagName {
            _range: Range {
                start_byte: 35,
                end_byte: 36,
                start_point: Point {
                    row: 3,
                    column: 8,
                },
                end_point: Point {
                    row: 3,
                    column: 9,
                },
            },
            _id: 16,
            _parent: Some(
                15,
            ),
        },
        Text(
            Text {
                _range: Range {
                    start_byte: 40,
                    end_byte: 57,
                    start_point: Point {
                        row: 4,
                        column: 2,
                    },
                    end_point: Point {
                        row: 5,
                        column: 6,
                    },
                },
                _id: 17,
                _parent: Some(
                    1,
                ),
            },
        ),
        EndTag(
            EndTag {
                children: AstNodeId {
                    id: 19,
                    _marker: PhantomData<ast_html::generated::TagName>,
                },
                _range: Range {
                    start_byte: 58,
                    end_byte: 64,
                    start_point: Point {
                        row: 6,
                        column: 0,
                    },
                    end_point: Point {
                        row: 6,
                        column: 6,
                    },
                },
                _id: 18,
                _parent: Some(
                    1,
                ),
            },
        ),
        TagName {
            _range: Range {
                start_byte: 60,
                end_byte: 63,
                start_point: Point {
                    row: 6,
                    column: 2,
                },
                end_point: Point {
                    row: 6,
                    column: 5,
                },
            },
            _id: 19,
            _parent: Some(
                18,
            ),
        },
    ],
}
